# web-based-ifc-sdf-tool

./: .gitignore  README.md  pyproject.toml  start.py
src/: cls_cfg_loader.py  cls_ifc_exporter.py  cls_obj_viewer.py  cls_sdf_dataset.py  cls_sdf_model.py  cls_sdf_reconstructor.py  cls_sdf_runner.py  cls_sdf_sampler.py  template.yaml
src/ui/: cls_log_writer.py  style.css  topbar.html  ui_actions.py  viewer.html
